hover show effect done

--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@
     </div>
 
     <!-- Bot pop-up intro -->
-    <div class="tap-target" data-target="profile_div">
-      <div class="tap-target-content">
-        <h5 class="white-text">Hey there 👋</h5>
+    <div class="show-prompt">
+      <div class="show-prompt-content">
+        <h5 class="white-text">Hi there 👋</h5>
         <p class="white-text">
           I can help you with queries regarding Marlabs. Click on bot icon to getting started.
         </p>
       </div>
+      <div class="profile-white-bg"></div>
     </div>
   </div>
 
