--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     <!-- Bot pop-up intro -->
     <div class="show-prompt">
       <div class="show-prompt-content">
-        <h5 class="white-text">Hi there 👋</h5>
+        <h5 class="white-text">Hi there 👋,</h5>
         <p class="white-text">
-          I can help you with queries regarding Marlabs. Click on bot icon to getting started.
+          I'm your smart chatbot to answer your queries. Click on bot icon to get started.
         </p>
       </div>
       <div class="profile-white-bg"></div>
