Changes to hi there screen

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <!-- Bot pop-up intro -->
     <div class="show-prompt">
       <div class="show-prompt-content">
-        <h5 class="white-text">Hi there 👋,</h5>
+        <h5 class="white-text">Hi there, 👋</h5>
         <p class="white-text">
           I'm your smart chatbot to answer your queries. Click on bot icon to get started.
         </p>
