--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!--keypad for user to type the message -->
       <div class="keypad">
         <img class="botAvatar" style="transform: scale(1.5); margin: 5px;" src="static/img/userAvatar.jpg" />
-        <textarea id="userInput" placeholder="Type a message..." class="usrInput"></textarea>
+        <textarea id="userInput" placeholder="Type your query here..." class="usrInput"></textarea>
         <div id="sendButton">
           <i class="fa fa-paper-plane" aria-hidden="true"></i>
         </div>
