--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <!--Add the name of the bot here -->
         <img class="titleProfile" src="static/img/marlabs_logo_png.png"/>
         <span class="chat_header_title">mChat</span>
-        <span class="dropdown-trigger" href="#" data-target="dropdown1">
-          <i class="material-icons"> more_vert </i>
+        <span class="header_icons">
+          <span id="restart" class="material-icons material-symbols-outlined" title="Restart">autorenew</span>
+          <span id="close" class="material-icons material-symbols-outlined" title="Close">close</span>
         </span>
 
         <!-- Dropdown menu-->
