Suggestion buttons added.

--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
       <div class="chats" id="chats">
         <div class="clearfix"></div>
       </div>
+      <!-- TypingSuggestion -->
+      <div class="typing_suggestion_section">
+        
+      </div>
 
       <!--keypad for user to type the message -->
       <div class="keypad">
